src/FinancialForce ERP Core/objects/ScheduledJobRun__c.object
<CustomObject>
    <customHelpPage>ScheduledJobRunHelp</customHelpPage>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BatchProcessStatus__c</fullName>
        <formula>TEXT( BatchProcess__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipName>Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Scheduled Job</label>
        <referenceTo>ScheduledJob__c</referenceTo>
        <relationshipLabel>Runs</relationshipLabel>
        <relationshipName>Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scheduled Job Run</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Job Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>